--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -286,8 +286,10 @@ entreprise dynamique en tant qu'alternant afin de contribuer activement à l’a
           <ul>
             <li>QGIS — géotraitement, mise en page</li>
             <li>Excel — tableaux croisés, formules</li>
-            <li>Analyse des risques & Normes ISO (9001, 14001, 50001)</li>
+            <li>Analyse des risques & Normes ISO (9001, 14001, 50001, 26000)</li>
             <li>Gestion HSE & Bilan Carbone</li>
+            <li>AMDEC, PDCA, DUERP</li>
+            <li>Arbre des causes</li>
           </ul>
         </div>
         <div class="card">
